@@ -14,8 +14,8 @@ import {
   ISplitClientChildProps,
   ISplitClientProps,
   ISplitContextValues,
-  ISplitFactoryChildProps,
-  ISplitFactoryProps,
+  ISplitFactoryProviderChildProps,
+  ISplitFactoryProviderProps,
   ISplitStatus,
   ISplitTreatmentsChildProps,
   ISplitTreatmentsProps,
