@@ -21,8 +21,8 @@ export type {
   ISplitClientChildProps,
   ISplitClientProps,
   ISplitContextValues,
-  ISplitFactoryChildProps,
-  ISplitFactoryProps,
+  ISplitFactoryProviderChildProps,
+  ISplitFactoryProviderProps,
   ISplitStatus,
   ISplitTreatmentsChildProps,
   ISplitTreatmentsProps,
